# PointCloudSegmentation

./: .gitignore  CMakeLists.txt  README.md  build.bat  index.html  package_windows.bat  pcseg_cli.bat  pcseg_gui.bat  readme.txt  run_demo.bat  run_gui.bat
apps/cli/: main.cpp
apps/gui/: CMakeLists.txt  Camera.h  GLCompat.cpp  GLHeaders.h  Mat4.h  Viewer.cpp  Viewer.h  ViewerPanel.cpp  main.cpp
core/include/pcseg/: Eigen3x3.h  KdTree.h  Normals.h  Palette.h  PointCloud.h  PointCloudIO.h  Primitive.h  Segmentation.h  Synthetic.h  Vec3.h
core/src/: KdTree.cpp  Normals.cpp  PointCloud.cpp  PointCloudIO.cpp  Primitive.cpp  Synthetic.cpp
data/: README.md  scene.ply  scene_segmented.ply  stress_close_parallel_28000.ply  stress_complex_35200.ply  stress_large_100000.ply  stress_sparse_noisy_14800.ply
data/real/: README.md  stanford_armadillo_50000.ply  stanford_bunny.ply  stanford_bunny_res2.ply  stanford_bunny_res3.ply  stanford_dragon_res3.ply
docs/: 从零复刻指南_面向对象基础版.md  实施计划书.md
docs/report/: README.md  main.tex  nwafupaper.cls
docs/report/bib/: refs.bib  sample.bib
docs/report/code/: Normals.cpp  Segmentation.cpp
docs/report/contents/: abstract.tex  app-codelists.tex  app-requirements.tex  report.tex
docs/report/data/: db.csv  grade.csv
docs/report/settings/: format.tex  nwafupaper.def  packages.tex
tests/: test_main.cpp
tools/: README_toolchain.md  generate_stress_ply.py  prepare_pointcloud.py
tools/w64devkit/include/: vsgcapture.h
web/: README.md  app.js  styles.css
